# bottleneck-find-70

./: Cargo.toml  README.md  dependency_graph.dot  kafka_graph.dot  report.json
src/: critical_path.rs  dependency_graph.rs  lib.rs  main.rs  models.rs  output.rs  parser.rs  ranking.rs
src/monitor/: config.rs  detection.rs  mod.rs  monitor.rs  stream.rs  webhook.rs
tests/: integration_tests.rs  kafka_async_traces.json  producer_slow_test.json  sample_traces.json
