[package]
name = "bottleneck-find"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
petgraph = "0.6"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
prettytable-rs = "0.10"
rand = "0.8"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
futures-util = "0.3"

[dev-dependencies]
tempfile = "3.10"
